--- a/blogpost.html
+++ b/blogpost.html
@@ -8,7 +8,7 @@
 
         <div id="container">
             <div id="cabecera">Hyperblog <span id="tagline">
-                Tu blog de confianza
+                Tu maestro
             </span>
             </div>
             <div id="post">
@@ -19,6 +19,9 @@
                 <p>
                     Los blogs son la mejor manera de compartir información y tus
                     ideas
+                </p>
+                <p>
+                    Suscribete y dale like
                 </p>
             </div>
         </div>
