--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,10 @@
     <body>
 
         <div id="container">
-            <div id="cabecera">Hyperblog <span id="tagline">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.png">
+                Hyperblog 
+                <span id="tagline">
                 Mi blog de cabecera
             </span>
             </div>
